--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=views/index.html">
+        <meta http-equiv="refresh" content="1;url=views/index.ejs">
         <title>Page Redirection</title>
     </head>
     <body>
